# cmaketest

./: .gitignore  CMakeLists.txt
add_dynamic/: CMakeLists.txt
add_dynamic/include/: add_dy.h
add_dynamic/src/: add_dy.cpp
add_static/: CMakeLists.txt
add_static/include/: add_st.h
add_static/src/: add_st.cpp  add_static.cpp
adds/include/: adds.h
hello/: CMakeLists.txt
hello/include/: add.h
hello/src/: add.cpp  main.cpp
